build/log/idf_py_stderr_output_1032421
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: In function 'adc_timer_callback':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:59:17: error: 'delay_task_handle' undeclared (first use in this function); did you mean 'oled_task_handle'?
   59 |             if (delay_task_handle != NULL)
      |                 ^~~~~~~~~~~~~~~~~
      |                 oled_task_handle
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:59:17: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:167: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/interr_event.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:44:16: warning: 'array_max_abs_int16' defined but not used [-Wunused-function]
   44 | static int16_t array_max_abs_int16(const int16_t arr[], int n) {
      |                ^~~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c: In function 'app_main':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:85:105: error: 'delay_task_handle' undeclared (first use in this function); did you mean 'oled_task_handle'?
   85 |     xTaskCreatePinnedToCore(processing_task, "processing_task", 10240, NULL, configMAX_PRIORITIES - 1, &delay_task_handle, 1);
      |                                                                                                         ^~~~~~~~~~~~~~~~~
      |                                                                                                         oled_task_handle
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:85:105: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
